# etf-trend-monitor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SES.py  docker-compose.ci.yml  docker-compose.yml  etf-list-test.csv  etf-list.csv  pyproject.toml  run_monitor.py
.github/workflows/: ephemeral-daily-run.yml
scheduler/: crontab  run.sh
supervisor/: supervisord.conf
